--- a/scss/_whyVisite.scss
+++ b/scss/_whyVisite.scss
@@ -29,7 +29,7 @@ overflow-x: hidden;
   overflow-x: auto;
 }
 .responsiveImage {
- 
+ object-fit: cover;
   width: 100%;
   height: auto;
   border-radius: 10px;
@@ -152,6 +152,7 @@ overflow-x: hidden;
   }
 }
 .responsiveImage {
+  object-fit: cover;
   width: 100%;
   height: auto;
   border-radius: 0px;
