chore: Update background color in _index.scss and main.css

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -48,7 +48,7 @@
     position: relative;
     top: -7px;
     z-index: 2;
-    background-color: #e4493b;
+    background-color: #2f4d73;
     border-radius: 10px;
     padding: 15px 60px;
 
