--- a/styles/main.css
+++ b/styles/main.css
@@ -50,7 +50,6 @@
   top: -7px;
   z-index: 2;
   background-color: #2f4d73;
-  border-radius: 10px;
   padding: 15px 60px;
 }
 .index .counter-section .border-right {
@@ -2400,6 +2399,25 @@
 .top_bar_menu-text {
   font-size: 14px;
   justify-content: center;
+}
+
+.btn-default {
+  width: 100%;
+  max-width: 150px;
+  height: 50px;
+  border: 1px solid #ffffff;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent !important;
+  color: #ffffff;
+  transition: 0.3s all ease-in-out;
+  margin: auto;
+}
+.btn-default:hover {
+  background-color: #ffffff !important;
+  color: #22264c !important;
 }
 
 .nav {
