done section 1 why visite

--- a/scss/_whyVisite.scss
+++ b/scss/_whyVisite.scss
@@ -29,6 +29,7 @@ overflow-x: hidden;
   overflow-x: auto;
 }
 .responsiveImage {
+  
  object-fit: cover;
   width: 100%;
   height: auto;
@@ -42,7 +43,7 @@ overflow-x: hidden;
 }
 
 .bm {
-  color: #E4493B;
+  color: #FFFAFA;
   font-weight: 600;
 }
 .title {
@@ -89,7 +90,7 @@ overflow-x: hidden;
 
     line-height: 60px;
     margin: 0 0 1rem;
-    color: #faa61a;
+    color: #FFFAFA;
   }
 }
 .sub-title {
