--- a/styles/main.css
+++ b/styles/main.css
@@ -3154,7 +3154,7 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
   font-size: 50px;
   line-height: 60px;
   margin: 0 0 1rem;
-  color: #faa61a;
+  color: #304D73;
 }
 .whyVisite .btn-container {
   display: flex;
