who attends section 1 complete

--- a/styles/main.css
+++ b/styles/main.css
@@ -4902,7 +4902,7 @@ body.whitebk {
   font-weight: 700;
   line-height: 50px;
   margin: 0px 0px 1rem;
-  color: rgb(250, 166, 26);
+  color: #304D73;
 }
 .whoattends h4 {
   margin-bottom: 16px;
