--- a/scss/_whoattends.scss
+++ b/scss/_whoattends.scss
@@ -4,7 +4,7 @@
     font-weight: 700;
     line-height: 50px;
     margin: 0px 0px 1rem;
-    color: rgb(250, 166, 26);
+    color: #304D73;
   }
   h4 {
     margin-bottom: 16px;
