--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -97,15 +97,14 @@
   }
 
   .hover-effect:hover {
-    transform: scale(1.05);
-    opacity: 0.8;
+    opacity: 0.7;
   }
-  $quinacridone-magenta: #d59d04;
-  $persian-orange: rgb(235, 145, 0.6);
-  $chestnut: #d75847;
+  $quinacridone-magenta: #2f4d73;
+  $persian-orange: #4e709c;
+  $chestnut: #23a6ca;
   $lavender-blush: #f0e3e2ff;
-  $caramel: #cd7a33ff;
-  $fuchsia-rose: rgba(246, 0, 0, 0.888);
+  $caramel: #f15b6c;
+  $fuchsia-rose: #db263c;
 
   $gradient-top: linear-gradient(
     45deg,
@@ -116,10 +115,9 @@
 
   .card1 {
     cursor: pointer;
-    width: 250px;
+    width: 33.3333%;
     height: 300px;
     padding: 20px;
-    border-radius: 25px;
     text-align: center;
     background: url("/images/3.jpg") no-repeat center center;
     background-size: cover;
@@ -172,10 +170,9 @@
   }
   .card2 {
     cursor: pointer;
-    width: 250px;
+    width: 33.3333%;
     height: 300px;
     padding: 20px;
-    border-radius: 25px;
     text-align: center;
     background: url("/images/contact/1.jpg") no-repeat center center;
     background-size: cover;
@@ -228,10 +225,9 @@
   }
   .card3 {
     cursor: pointer;
-    width: 250px;
+    width: 33.3333%;
     height: 300px;
     padding: 20px;
-    border-radius: 25px;
     text-align: center;
     background: url("/images/confnew/ni.jpg") no-repeat left center; /* وضع الصورة خلف التدرج */
     background-size: cover;
@@ -289,10 +285,9 @@
   }
   .card4 {
     cursor: pointer;
-    width: 250px;
+    width: 33.3333%;
     height: 300px;
     padding: 20px;
-    border-radius: 25px;
     text-align: center;
     background: url("/images/2.jpg") no-repeat center center; /* وضع الصورة خلف التدرج */
     background-size: cover;
