done who attends

--- a/scss/_whyVisite.scss
+++ b/scss/_whyVisite.scss
@@ -23,6 +23,12 @@ overflow-x: hidden;
   flex-grow: 1;
 }
 }
+p{
+  color: #1a283c;
+}
+b{
+  color: #304D73;
+}
 .section-1 {
 
 .mai {
@@ -160,7 +166,7 @@ overflow-x: hidden;
   transition: transform 0.3s ease-in-out;
 }
 p {
-  color: #000000;
+  color: #1a283c;
   font-size: 18px;
   line-height: 28px;
   font-weight: 400;
