chore: Update button and background styles in main.css and _index.scss

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -396,7 +396,7 @@
   }
 
   .section-2 {
-    background-color: #e4493b;
+    background-color: #db263c;
     .nonsense {
       background-color: #2cae76;
     }
@@ -414,7 +414,7 @@
       display: flex;
       justify-content: space-between;
       width: 600px;
-      height: 690px;
+      height: 440px;
       gap: 20px;
       overflow: hidden;
       img {
