--- a/styles/main.css
+++ b/styles/main.css
@@ -352,7 +352,7 @@
   }
 }
 .index .section-2 {
-  background-color: #e4493b;
+  background-color: #db263c;
   /* الحاوية الرئيسية */
   /* إعداد السلايدر */
 }
@@ -371,7 +371,7 @@
   display: flex;
   justify-content: space-between;
   width: 600px;
-  height: 690px;
+  height: 440px;
   gap: 20px;
   overflow: hidden;
 }
