--- a/scss/_sectors.scss
+++ b/scss/_sectors.scss
@@ -5,7 +5,7 @@
 
     line-height: 60px;
     margin: 0 0 1rem;
-    color: #faa61a;
+    color: #304D73;
   }
   .mai {
     overflow-x: visible;
@@ -34,13 +34,33 @@
   }
 }
 .temp {
+  .benefits-content {
+    text-align: center;
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 20px;
+  }
+  
+  .benefits-content h3 {
+    color: #304D73; /* أزرق ناعم */
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+  }
+  
+  .benefits-content .custom-list p {
+    margin: 6px 0;
+    font-size: 1rem;
+    line-height: 1.6;
+  }
+  
   .main-text {
     font-weight: 700;
     font-size: 50px;
 
     line-height: 60px;
     margin: 0 0 1rem;
-    color: #faa61a;
+    color: #304D73;
   }
   p {
     font-weight: 420;
@@ -54,7 +74,7 @@
     font-size: 5rem; // تم تقليل الحجم
     line-height: 2.5rem; // جعل ارتفاع السطر مناسباً
     margin: 0 0 1rem;
-    color: #faa61a;
+    color: #304D73;
   }
 
   .text-center {
@@ -122,7 +142,7 @@
     font-size: 50px;
     line-height: 60px;
     margin: 0 0 1rem;
-    color: #faa61a;
+    color: #304D73;
   }
 
   p {
@@ -138,7 +158,7 @@
     font-size: 50px;
     line-height: 60px;
     margin: 0 0 1rem;
-    color: #faa61a;
+    color: #304D73;
   }
 
   p {
