--- a/styles/main.css
+++ b/styles/main.css
@@ -4952,7 +4952,7 @@ body.whitebk {
   font-size: 50px;
   line-height: 60px;
   margin: 0 0 1rem;
-  color: #faa61a;
+  color: #304D73;
 }
 .sectors .mai {
   overflow-x: visible;
@@ -4981,12 +4981,29 @@ body.whitebk {
   font-weight: 600;
 }
 
+.temp .benefits-content {
+  text-align: center;
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 20px;
+}
+.temp .benefits-content h3 {
+  color: #304D73; /* أزرق ناعم */
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 1.5rem;
+}
+.temp .benefits-content .custom-list p {
+  margin: 6px 0;
+  font-size: 1rem;
+  line-height: 1.6;
+}
 .temp .main-text {
   font-weight: 700;
   font-size: 50px;
   line-height: 60px;
   margin: 0 0 1rem;
-  color: #faa61a;
+  color: #304D73;
 }
 .temp p {
   font-weight: 420;
@@ -4999,7 +5016,7 @@ body.whitebk {
   font-size: 5rem;
   line-height: 2.5rem;
   margin: 0 0 1rem;
-  color: #faa61a;
+  color: #304D73;
 }
 .sectors2 .text-center {
   font-weight: 400;
@@ -5055,7 +5072,7 @@ body.whitebk {
   font-size: 50px;
   line-height: 60px;
   margin: 0 0 1rem;
-  color: #faa61a;
+  color: #304D73;
 }
 .temp p {
   font-weight: 420;
@@ -5068,7 +5085,7 @@ body.whitebk {
   font-size: 50px;
   line-height: 60px;
   margin: 0 0 1rem;
-  color: #faa61a;
+  color: #304D73;
 }
 .temp p {
   font-weight: 420;
