--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-image: url("../public/footer_bg.jpg");
+  background-image: url("../public/images/footer.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: center;
