--- a/styles/main.css
+++ b/styles/main.css
@@ -2668,7 +2668,7 @@
 }
 
 .footer {
-  background-image: url("../public/footer_bg.jpg");
+  background-image: url("../public/images/footer.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: center;
