--- a/styles/main.css
+++ b/styles/main.css
@@ -2746,7 +2746,7 @@
   border-radius: 10px;
 }
 .register .section-1 .title {
-  background-image: url("/images/register/10th-IEE.jpg");
+  background-image: url("/images/register/road2.png");
   border-radius: 10px;
   height: 33.2vh;
   background-position: center top;
@@ -2784,7 +2784,7 @@
   }
 }
 .register .section-1 .maintext {
-  color: #eec11d;
+  color: #304D73;
   font-weight: 700;
   font-size: 30px;
   line-height: 40px;
@@ -2836,14 +2836,14 @@
 }
 .input-field:focus, .input-field:valid {
   outline: 0;
-  border-bottom-color: #eec11d !important;
+  border-bottom-color: #304D73 !important;
   border-width: 2px !important;
   border-top: none !important;
   border-left: none !important;
   border-right: none !important;
 }
 .input-field:focus + .input-label, .input-field:valid + .input-label {
-  color: #eec11d;
+  color: #304D73;
   transform: translateY(-1.5rem);
 }
 
@@ -2857,7 +2857,7 @@
   padding: 1em;
   width: 100%;
   font-weight: 500;
-  background-color: #eec11d;
+  background-color: #304D73;
   border-radius: 6px;
   color: #FFF;
   border: 0;
@@ -2874,7 +2874,7 @@
 }
 .card-info a {
   display: block;
-  color: #eec11d;
+  color: #304D73;
   text-decoration: none;
 }
 
@@ -2891,7 +2891,7 @@
 }
 
 .select-label.focused {
-  color: #eec11d;
+  color: #304D73;
   transform: translateY(-1.5rem);
 }
 
@@ -3055,7 +3055,7 @@
   border: 1px solid transparent;
   border-radius: 360px;
   color: #ffffff !important;
-  background: linear-gradient(#eec11d, #faa61a) padding-box, conic-gradient(from calc(var(--gradient-angle) - var(--gradient-angle-offset)), transparent, #d2a917 var(--gradient-percent), #f5d870 calc(var(--gradient-percent) * 2), #dbb733 calc(var(--gradient-percent) * 3), transparent calc(var(--gradient-percent) * 4)) border-box;
+  background: linear-gradient(#304D73, #faa61a) padding-box, conic-gradient(from calc(var(--gradient-angle) - var(--gradient-angle-offset)), transparent, #d2a917 var(--gradient-percent), #f5d870 calc(var(--gradient-percent) * 2), #dbb733 calc(var(--gradient-percent) * 3), transparent calc(var(--gradient-percent) * 4)) border-box;
   box-shadow: inset 0 0 0 1px var(--shiny-cta-bg-subtle);
 }
 .shiny-cta-2::before, .shiny-cta-2::after,
@@ -3158,14 +3158,14 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
   top: 50%;
   transform: translateY(-50%);
   pointer-events: none; /* Ensure the icon doesn't interfere with input */
-  color: #eec11d; /* Change the icon color */
+  color: #304D73; /* Change the icon color */
   font-size: 1.2em;
 }
 
 /* Optional: Add hover effect */
 .input-field.date-input:hover::after,
 .input-field.datetime-input:hover::after {
-  color: #eec11d; /* Darker color on hover */
+  color: #304D73; /* Darker color on hover */
 }
 
 .whyVisite .main-text {
