--- a/styles/main.css
+++ b/styles/main.css
@@ -3050,7 +3050,7 @@
   border: 1px solid transparent;
   border-radius: 360px;
   color: #ffffff !important;
-  background: linear-gradient(#304D73, #faa61a) padding-box, conic-gradient(from calc(var(--gradient-angle) - var(--gradient-angle-offset)), transparent, #d2a917 var(--gradient-percent), #f5d870 calc(var(--gradient-percent) * 2), #dbb733 calc(var(--gradient-percent) * 3), transparent calc(var(--gradient-percent) * 4)) border-box;
+  background: linear-gradient(#304D73, #304D73) padding-box, conic-gradient(from calc(var(--gradient-angle) - var(--gradient-angle-offset)), transparent, #304D73 var(--gradient-percent), #f5d870 calc(var(--gradient-percent) * 2), #dbb733 calc(var(--gradient-percent) * 3), transparent calc(var(--gradient-percent) * 4)) border-box;
   box-shadow: inset 0 0 0 1px var(--shiny-cta-bg-subtle);
 }
 .shiny-cta-2::before, .shiny-cta-2::after,
