done edit photo main page

--- a/scss/_govermentSupport.scss
+++ b/scss/_govermentSupport.scss
@@ -1,6 +1,6 @@
 .govermentSupport {
   .bg-image {
-    background: url("../public/images/covermentSupport/hj.jpg");
+    background: url("/images/cardsimg/3.png");
     width: 100%;
     height: 400px;
     background-size: cover;
