--- a/scss/_sectors.scss
+++ b/scss/_sectors.scss
@@ -110,7 +110,7 @@
   .read-more {
     display: inline-block;
     font-size: 1rem;
-    color: #faa61a;
+    color: #304D73;
     font-weight: 600;
     cursor: pointer;
     text-decoration: underline;
