--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -73,7 +73,7 @@
   }
 
   .hn {
-    color: #faa61a;
+    color: #304D73;
     font-weight: 700;
     font-size: 40px;
 
@@ -119,7 +119,7 @@
     height: 300px;
     padding: 20px;
     text-align: center;
-    background: url("/images/3.jpg") no-repeat center center;
+    background: url("/images/cardsimg/1.png") no-repeat center center;
     background-size: cover;
     color: white;
     position: relative;
@@ -174,7 +174,7 @@
     height: 300px;
     padding: 20px;
     text-align: center;
-    background: url("/images/contact/1.jpg") no-repeat center center;
+    background: url("/images/cardsimg/5.png") no-repeat center center;
     background-size: cover;
     color: white;
     position: relative;
@@ -229,7 +229,7 @@
     height: 300px;
     padding: 20px;
     text-align: center;
-    background: url("/images/confnew/ni.jpg") no-repeat left center; /* وضع الصورة خلف التدرج */
+    background: url("/images/cardsimg/3.png") no-repeat left center; /* وضع الصورة خلف التدرج */
     background-size: cover;
     color: white;
     position: relative;
@@ -566,7 +566,7 @@
             padding-bottom: 15px;
             &:hover {
               color: black;
-              border-left: solid 0px #faa61a;
+              border-left: solid 0px #304D73;
             }
           }
         }
@@ -585,29 +585,29 @@
         border-left: 4px solid #e9ecef;
 
         &:hover {
-          color: #faa61a;
+          color: #304D73;
 
-          border-left: solid 4px #faa61a;
+          border-left: solid 4px #304D73;
         }
         &:lang(ar) {
           &.active {
-            color: #faa61a;
-            border-right: solid 4px #faa61a;
+            color: #304D73;
+            border-right: solid 4px #304D73;
             border-left: solid 4px #faa81a00;
           }
           border-left: solid 4px #e9ecef00;
 
           border-right: solid 4px #e9ecef;
           &:hover {
-            color: #faa61a;
+            color: #304D73;
 
-            border-right: solid 4px #faa61a;
+            border-right: solid 4px #304D73;
           }
         }
 
         &.active {
-          color: #faa61a;
-          border-left: solid 4px #faa61a;
+          color: #304D73;
+          border-left: solid 4px #304D73;
         }
       }
 
