--- a/scss/_bookCare.scss
+++ b/scss/_bookCare.scss
@@ -1,6 +1,6 @@
 .bookCare {
   .bg-image {
-    background: url("../public/images/bookCare/2.jpg");
+    background: url("../public/images/bookCare/3.png");
     width: 100%;
     height: 400px;
     background-size: cover;
