--- a/scss/_conference.scss
+++ b/scss/_conference.scss
@@ -1,10 +1,10 @@
 .conference {
   .bg-image {
-    background: url("../public/images/green2.jpg");
+    background: url("/images/conference/1.png");
     width: 100%;
     height: 400px;
     background-size: cover;
-    background-position: 0px -110px;
+    background-position: 0px -60px;
     background-repeat: no-repeat;
 
     @media screen and (max-width: 768px) {
@@ -92,6 +92,7 @@
       border: 2px solid #e6e6e6;
       .img0 {
         width: 40%;
+      
       }
       h3 {
         font-size: 25px;
@@ -121,6 +122,7 @@
 
       .img0 {
         width: 50%;
+        height: 200px;
       }
     }
   }
