--- a/scss/_reports.scss
+++ b/scss/_reports.scss
@@ -1,6 +1,6 @@
 .reports {
   .bg-image {
-    background: url("../public/images/location/DSC01781.jpg");
+    background: url("/images/justgood.webp");
     width: 100%;
     height: 400px;
     background-size: cover;
