--- a/styles/main.css
+++ b/styles/main.css
@@ -3664,11 +3664,11 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
 }
 
 .conference .bg-image {
-  background: url("../public/images/green2.jpg");
+  background: url("/images/conference/1.png");
   width: 100%;
   height: 400px;
   background-size: cover;
-  background-position: 0px -110px;
+  background-position: 0px -60px;
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 768px) {
@@ -3779,6 +3779,7 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
 }
 .conference .section-1 .wha .img0 {
   width: 50%;
+  height: 200px;
 }
 .conference .main-btn2 {
   padding: 13px 17px;
@@ -4168,7 +4169,7 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
 }
 
 .reports .bg-image {
-  background: url("../public/images/location/DSC01781.jpg");
+  background: url("/images/justgood.webp");
   width: 100%;
   height: 400px;
   background-size: cover;
@@ -4709,7 +4710,7 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
 }
 
 .bookCare .bg-image {
-  background: url("../public/images/bookCare/2.jpg");
+  background: url("../public/images/bookCare/3.png");
   width: 100%;
   height: 400px;
   background-size: cover;
