--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,6 +1,6 @@
 .contact {
   .bg-image {
-    background: url("../public/images/contact/1.jpg");
+    background: url("../public/images/contact/3.png");
     width: 100%;
     height: 400px;
     background-size: cover;
