--- a/styles/main.css
+++ b/styles/main.css
@@ -4452,7 +4452,7 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
 }
 
 .contact .bg-image {
-  background: url("../public/images/contact/1.jpg");
+  background: url("../public/images/contact/3.png");
   width: 100%;
   height: 400px;
   background-size: cover;
