--- a/styles/main.css
+++ b/styles/main.css
@@ -1711,6 +1711,7 @@
   font-size: 26px;
   position: relative;
   color: transparent;
+  -webkit-background-clip: text;
   color: var(--tp-common-black);
   background-image: linear-gradient(329deg, #ff91fa 13.55%, #fa6490 48.54%, #f7d86a 86.44%);
 }
