--- a/styles/main.scss
+++ b/styles/main.scss
@@ -99,6 +99,16 @@ ul {
     padding-right: 2rem;
     padding-left: 0px;
   }
+  @media (max-width:760px) {
+    &:lang(en) {
+      padding-left: 0rem;
+      padding-right: 0px;
+    }
+    &:lang(ar) {
+      padding-right: 0rem;
+      padding-left: 0px;
+    }
+  }
 }
 
 html,
@@ -206,7 +216,7 @@ body {
     padding-right: 3rem !important;
     padding-left: 0 !important;
     @media screen and (max-width: 768px) {
-      padding-left: 0 !important;
+      padding-left: 31px !important;
       padding-right: 0 !important;
     }
   }
@@ -215,7 +225,7 @@ body {
     padding-right: 0 !important;
     @media screen and (max-width: 768px) {
       padding-left: 0 !important;
-      padding-right: 0 !important;
+      padding-right: 31px !important;
     }
   }
 }
