--- a/styles/main.scss
+++ b/styles/main.scss
@@ -252,7 +252,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #22264c !important;
+  background-color: #183b69 !important;
   color: #ffffff;
   transition: .3s all ease-in-out;
 
