--- a/styles/main.css
+++ b/styles/main.css
@@ -29,13 +29,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #22264c !important;
+  background-color: #183b69 !important;
   color: #ffffff;
   transition: 0.3s all ease-in-out;
 }
 .index .main-btn:hover {
   background-color: #ffffff !important;
-  color: #22264c !important;
+  color: #183b69 !important;
+}
+@media (max-width: 760px) {
+  .index .main-btn {
+    max-width: 140px;
+    font-size: 12px;
+    height: 40px;
+    font-weight: 700;
+  }
 }
 .index .pointer {
   cursor: pointer;
@@ -68,7 +76,7 @@
 }
 @media (max-width: 767px) {
   .index .text1 {
-    font-size: 13px;
+    font-size: 12px;
   }
 }
 .index .hn {
@@ -1597,7 +1605,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: #22264c;
+  background-color: #183b69;
   transform: rotate(-20deg);
   z-index: -1;
 }
@@ -2115,7 +2123,7 @@
 }
 @media (max-width: 767px) {
   .index .video-container .video-timer .toxt1 {
-    font-size: 18px;
+    font-size: 16px;
     width: 75vw;
     padding-bottom: 0px;
   }
@@ -2471,7 +2479,7 @@
 }
 .btn-default:hover {
   background-color: #ffffff !important;
-  color: #22264c !important;
+  color: #183b69 !important;
 }
 
 @media (max-content: 760px) {
@@ -5101,7 +5109,7 @@ body input:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #22264c !important;
+  background-color: #183b69 !important;
   color: #ffffff;
   transition: 0.3s all ease-in-out;
 }
