--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-  background-image: url("../public/images/footer.png");
+  // background-image: url("../public/images/footer.png");
+  background-color: #2f4d73;
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: center;
@@ -9,10 +10,9 @@
   z-index: 2;
 
   .bg-footer {
-    background-color: rgba(0, 0, 0, 0.5);
     width: 100vw;
-    padding: 50px 0;
-    min-height: 500px;
+    padding: 25px 0;
+    min-height: 450px;
   }
   input {
     background: rgb(255, 255, 255, 0.3);
@@ -36,21 +36,20 @@
     padding: 10px 20px;
     border-radius: 10px;
   }
-  .footer-end {
-    background: #00000080;
-    width: 100%;
-    a {
-      background: #000;
-      width: 50px;
-      height: 50px;
-      border-radius: 9999px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      svg {
-        height: 20px;
-        width: 20px;
-      }
-    }
+
+  .border-top{
+    border-top: 1px solid #fff;
+    padding-top: 10px;
+
+  }
+
+  .footer-icons {
+    border-radius: 9999999px;
+    border: 1px solid #fff;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
