--- a/scss/_markteing.scss
+++ b/scss/_markteing.scss
@@ -2,9 +2,9 @@
   .bg-image {
     background: url("../public/images/markteing/DSC08138.JPG");
     width: 100%;
-    height: 400px;
+    height: 420px;
     background-size: cover;
-    background-position: 0px -110px;
+    // background-position: 0px -110px;
     background-repeat: no-repeat;
 
     @media screen and (max-width: 768px) {
