--- a/styles/main.css
+++ b/styles/main.css
@@ -3686,6 +3686,11 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
   color: red;
 }
 
+.conference .allpic {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7019607843);
+}
 .conference .bg-image {
   background: url("/images/conference/1.png");
   width: 100%;
@@ -4077,9 +4082,8 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
 .markteing .bg-image {
   background: url("../public/images/markteing/DSC08138.JPG");
   width: 100%;
-  height: 400px;
+  height: 420px;
   background-size: cover;
-  background-position: 0px -110px;
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 768px) {
@@ -4537,7 +4541,7 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
 .contact .bg-image {
   background: url("../public/images/contact/3.png");
   width: 100%;
-  height: 400px;
+  height: 450px;
   background-size: cover;
   background-position: 0px -110px;
   background-repeat: no-repeat;
