--- a/styles/main.css
+++ b/styles/main.css
@@ -2812,10 +2812,11 @@
   border-radius: 10px;
 }
 .register .section-1 .title {
-  background-image: url("/images/register/3.png");
+  background-image: url("/images/register/5.png");
   border-radius: 10px;
   height: 33.2vh;
-  background-position: 99% center; /* الصورة تتحرك أكثر إلى اليمين */
+  background-position: 50% 38%;
+  /* الصورة تتحرك أكثر إلى اليمين */
   background-size: cover; /* ستجعل الصورة تظهر كاملة داخل العنصر */
   width: 92%;
   border: 1px solid #2e3f51;
